--- a/Raas.Standard/Raas.Standard.nuspec
+++ b/Raas.Standard/Raas.Standard.nuspec
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-Raas.Standard
-This file was automatically generated for Tango Card, Inc. by APIMATIC v2.0 ( https://apimatic.io )
+ - Raas.Standard
+ -
+ - This file was automatically generated for Tango Card, Inc. by APIMATIC v2.0 ( https://apimatic.io ).
 -->
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>Raas.Standard</id>
-    <version>2.0.0</version>
+    <version>2.3.0</version>
     <title>Raas.Standard</title>
-    <authors>APIMATIC 2.0</authors>
+    <authors>Tango Card</authors>
     <iconUrl>https://nuget.org/Content/Images/packageDefaultIcon-50x50.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>With this RESTful API you can integrate a global reward or incentive program into your app or platform. If you have any questions or if you'd like to receive your own credentials, please contact us at devsupport@tangocard.com.</description>
