--- a/Raas.Tests/Raas.Tests.csproj
+++ b/Raas.Tests/Raas.Tests.csproj
@@ -2,7 +2,7 @@
 <!--
  - Raas.Tests
  -
- - This file was automatically generated for Tango Card, Inc. by APIMATIC v2.0 ( https://apimatic.io )
+ - This file was automatically generated for Tango Card, Inc. by APIMATIC v2.0 ( https://apimatic.io ).
 -->
 <Project Sdk="Microsoft.NET.Sdk">
 
